fixed up code for map notebooks

--- a/Mn_model/evaluation/profiles_comparison-salinity.ipynb
+++ b/Mn_model/evaluation/profiles_comparison-salinity.ipynb
@@ -684,10 +684,24 @@
    },
    "outputs": [],
    "source": [
-    "G2015 = pd.read_csv('/ocean/brogalla/GEOTRACES/data/combined_GEOTRACES2015.csv')\n",
-    "stn_name  = G2015['Station'].astype('str')\n",
-    "stn_depth = G2015['Depth [salt water, m], lat = 49.00']\n",
-    "stn_sali  = G2015['Salinity, Practical [PSU]']"
+    "Mn_data = pd.read_csv('/ocean/brogalla/GEOTRACES/data/Mn_Integrated_Data_UBC-UVic_4-17-19.csv')\n",
+    "#stn_name  = G2015['Station'].astype('str')\n",
+    "dMn_BB1 = Mn_data['BB1'].dropna()[1:].astype('float')\n",
+    "dMn_BB2 = Mn_data['BB2'].dropna()[1:].astype('float')\n",
+    "dMn_BB3 = Mn_data['BB3'].dropna()[1:].astype('float')\n",
+    "dMn_CB1 = Mn_data['CB1'].dropna()[1:].astype('float')\n",
+    "dMn_CB2 = Mn_data['CB2'].dropna()[1:].astype('float')\n",
+    "dMn_CB3 = Mn_data['CB3'].dropna()[1:].astype('float')\n",
+    "dMn_CB4 = Mn_data['CB4'].dropna()[1:].astype('float')\n",
+    "dMn_CAA1 = Mn_data['CAA1'].dropna()[1:].astype('float')\n",
+    "dMn_CAA2 = Mn_data['CAA2'].dropna()[1:].astype('float')\n",
+    "dMn_CAA3 = Mn_data['CAA3'].dropna()[1:].astype('float')\n",
+    "dMn_CAA4 = Mn_data['CAA4'].dropna()[1:].astype('float')\n",
+    "dMn_CAA5 = Mn_data['CAA5'].dropna()[1:].astype('float')\n",
+    "dMn_CAA6 = Mn_data['CAA6'].dropna()[1:].astype('float')\n",
+    "dMn_CAA7 = Mn_data['CAA7'].dropna()[1:].astype('float')\n",
+    "dMn_CAA8 = Mn_data['CAA8'].dropna()[1:].astype('float')\n",
+    "dMn_CAA9 = Mn_data['CAA9'].dropna()[1:].astype('float')"
    ]
   },
   {
