fixed atmospheric forcing notebooks

--- a/forcing/atmosphere/Pb-EBC_parameterisation.ipynb
+++ b/forcing/atmosphere/Pb-EBC_parameterisation.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "#### World Data Centre for Aerosols\n",
-    "http://ebas.nilu.no, file format is NASA Ames\n",
+    "http://ebas.nilu.no, file format is NASA Ames. Converted to a NetCDF file using notebook read_NASA_ames.ipynb.\n",
     "\n",
     "Relevant stations: Alert (Nunavut), Summit (Greenland), Villum (Northern Greenland); only data available for both EBC and Pb at Alert. "
    ]
