--- a/forcing/atmosphere/read_NASA_ames.ipynb
+++ b/forcing/atmosphere/read_NASA_ames.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Read NASA Ames data file format\n",
+    "# Read NASA Ames data file format to acces EBC data from Alert\n",
     "http://proj.badc.rl.ac.uk/svn/ndg/nappy/trunk/doc/USAGE.txt\n",
     "\n",
-    "Overlapping data years are 1989-1992. Pb sampled weekly, EBC measured every hour"
+    "Data acquired from global aerosol database. Pb sampled data is available for a longer period of time than EBC. The overlapping data years are 1989-1992. Pb sampled weekly, EBC measured every hour."
    ]
   },
   {
@@ -1513,22 +1513,6 @@
    "source": [
     "print 'Pearson r value: ', spearmanr(EBC_filtered_grid, Pb_filtered_grid) # rank correlation"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Try to remove hysteresis:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
