fixed Ariane notebooks folder

--- a/particle_tracking/paper_Manuel/tracks_20150808-20110101_no-position-interpolation.ipynb
+++ b/particle_tracking/paper_Manuel/tracks_20150808-20110101_no-position-interpolation.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Ariane particle tracks of Baffin Bay\n",
     "\n",
+    "Difference compared to other runs: initial position coordinates end with .5; Ariane interprets this as not needing to interpolate the position to the middle of the time file.\n",
+    "\n",
     "date notebook created: 2019-02-20"
    ]
   },
