added a few map plots for resuspension

--- a/Mn_model/boundary_conditions/create_S_OBC.ipynb
+++ b/Mn_model/boundary_conditions/create_S_OBC.ipynb
@@ -11,26 +11,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/ocean/brogalla/GEOTRACES/analysis-birgit/cmocean-master/cmocean/tools.py:76: MatplotlibDeprecationWarning: The is_string_like function was deprecated in version 2.1.\n",
-      "  if not mpl.cbook.is_string_like(rgbin[0]):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import netCDF4 as nc\n",
     "import numpy as np\n",
-    "\n",
-    "from salishsea_tools import (\n",
-    "    nc_tools,\n",
-    "    viz_tools,\n",
-    ")\n",
-    "\n",
     "from mpl_toolkits.basemap import Basemap, cm\n",
     "import cmocean\n",
     "\n",
@@ -40,20 +25,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "mask = nc.Dataset('/ocean/brogalla/GEOTRACES/data/ANHA12_mask.nc')"
+    "mask = nc.Dataset('/ocean/brogalla/GEOTRACES/william/ANHA12_mask.nc')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lons = mask.variables['nav_lon']\n",
@@ -64,9 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "folder = '/ocean/brogalla/GEOTRACES/data/bathymetry/'\n",
@@ -78,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lon_mesh = d.variables['nav_lon']\n",
@@ -205,10 +182,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "inif = nc.Dataset('/ocean/brogalla/GEOTRACES/analysis-birgit/notebooks/ANHA12/IC/Mn_ini_20180716.nc')\n",
@@ -218,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +202,7 @@
        "(1, 50, 2400, 1632)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,25 +266,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 447)\n",
-      "(10, 447)\n",
-      "(50, 10, 447)\n",
-      "(50, 10, 447)\n"
+      "(10, 617)\n",
+      "(10, 617)\n",
+      "(50, 10, 617)\n",
+      "(50, 10, 617)\n"
      ]
     }
    ],
    "source": [
-    "boundaryE_lats = lats[1482:1492, 351:798]\n",
-    "boundaryE_lons = lons[1482:1492, 351:798]\n",
-    "boundaryE_dMn = ini_dMn[0,:,1482:1492, 351:798]\n",
-    "boundaryE_oMn = ini_oMn[0,:,1482:1492, 351:798]\n",
+    "boundaryE_lats = lats[1482:1492, 181:798]\n",
+    "boundaryE_lons = lons[1482:1492, 181:798]\n",
+    "boundaryE_dMn = ini_dMn[0,:,1482:1492, 181:798]\n",
+    "boundaryE_oMn = ini_oMn[0,:,1482:1492, 181:798]\n",
     "print(boundaryE_lats.shape)\n",
     "print(boundaryE_lons.shape)\n",
     "print(boundaryE_dMn.shape)\n",
@@ -318,16 +293,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.8721182235109691e-09"
+       "2.9073530799990433e-09"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,16 +313,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4470"
+       "6170"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,10 +335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "time_dim=1\n",
@@ -379,10 +352,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# function to stack input for boundaries:\n",
@@ -400,15 +371,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(447, 50, 100)\n",
-      "(447, 50, 100)\n"
+      "(617, 50, 100)\n",
+      "(617, 50, 100)\n"
      ]
     }
    ],
@@ -429,10 +400,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def flatten_input(var):\n",
@@ -445,15 +414,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(50, 4470)\n",
-      "(50, 4470)\n"
+      "(50, 6170)\n",
+      "(50, 6170)\n"
      ]
     }
    ],
@@ -466,15 +435,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 50, 1, 4470)\n",
-      "(1, 50, 1, 4470)\n"
+      "(1, 50, 1, 6170)\n",
+      "(1, 50, 1, 6170)\n"
      ]
     }
    ],
@@ -487,16 +456,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.0000000261765085e-09"
+       "3.0000000261765077e-09"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,10 +483,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load structure from sample dataset:\n",
@@ -526,44 +493,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "file format: NETCDF4\n",
-      "Conventions: CF-1.6\n",
-      "title: Mn Southern OBC\n",
-      "institution: Dept of Earth, Ocean & Atmospheric Sciences, University of British Columbia\n",
-      "source: https://bitbucket.org/ccar-modeling/analysis-birgit/src/tip/notebooks/ANHA12/BC/create_OBC.ipynb\n",
-      "references: REQUIRED\n",
-      "history: [2018-07-16 13:25:49] Created netCDF4 zlib=True dataset.\n",
-      "comment: Southern boundary\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "<class 'netCDF4._netCDF4.Dimension'> (unlimited): name = 't', size = 0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Setup the new NetCDF file:\n",
-    "ncd = nc.Dataset('Mn_South_OBC_20180716.nc', 'w', zlib=True)\n",
-    "nc_tools.init_dataset_attrs(\n",
-    "    ncd,\n",
-    "    title='Mn Southern OBC',\n",
-    "    notebook_name='create_OBC',\n",
-    "    nc_filepath='./create_OBC.nc',\n",
-    "    comment='Southern boundary')\n",
-    "\n",
+    "ncd = nc.Dataset('/ocean/brogalla/GEOTRACES/data/Mn_South_OBC_20190614.nc', 'w', zlib=True)\n",
     "ncd.createDimension('x', bound_dimE*rimwidth)\n",
     "ncd.createDimension('y',1)\n",
     "ncd.createDimension('z',len(BZ))\n",
@@ -572,10 +518,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dMn = ncd.createVariable('dMn', 'float64', ('t','z','y','x'))\n",
@@ -591,19 +535,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Missing value for dataset attribute: references\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "nc_tools.check_dataset_attrs(ncd)\n",
     "ncd.close()"
    ]
   },
