--- a/forcing/atmosphere/monthly_CESM_forcing.ipynb
+++ b/forcing/atmosphere/monthly_CESM_forcing.ipynb
@@ -495,6 +495,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.4489044e-07, 3.0640882e-07, 4.3518673e-07, 4.2565020e-07,\n",
+       "       5.6628005e-07, 4.0628490e-07, 5.2059215e-07, 3.6237185e-07,\n",
+       "       2.7514682e-07, 3.3668928e-07, 1.8064647e-07, 2.1715512e-07],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.nanmax(dst_a1_flat, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.2469135e-05, 6.9002155e-05, 1.1169737e-04, 1.0848988e-04,\n",
+       "       1.3871831e-04, 9.7667697e-05, 1.3392752e-04, 7.2312541e-05,\n",
+       "       7.1976901e-05, 8.4985877e-05, 4.6815385e-05, 5.4530341e-05],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.nanmax(dst_a3_flat, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_atm = '/ocean/brogalla/GEOTRACES/data/atm_flux_y2002m01.nc'\n",
+    "data_atm = nc.Dataset(file_atm)\n",
+    "fdust=data_atm.variables['fdust']\n",
+    "cdust=data_atm.variables['cdust']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.004688664860644e-07"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(fdust)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.960940860894614e-05"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(cdust)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
