compare model component contributions with van hulten paper

--- a/Mn_model/CH_rivers/RQ1-RCD.ipynb
+++ b/Mn_model/CH_rivers/RQ1-RCD.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,11 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ref   = nc.Dataset('/data/brogalla/run_storage/trial1/ref-2002/ANHA12_EXH006_2002_monthly.nc',  'r')\n",
+    "ref   = nc.Dataset('/data/brogalla/run_storage/ref-2003/ANHA12_EXH006_2003_monthly.nc',  'r')\n",
     "tlons = np.array(ref.variables['nav_lon'])\n",
     "tlats = np.array(ref.variables['nav_lat'])\n",
     "lons  = np.array(ref.variables['nav_lon'])#[1480:2050,160:800]\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,42 +124,62 @@
     "file5   = 'ANHA12_EXH006_2006_monthly.nc'\n",
     "file6   = 'ANHA12_EXH006_2007_monthly.nc'\n",
     "file7   = 'ANHA12_EXH006_2008_monthly.nc'\n",
-    "# file8   = 'ANHA12_EXH006_2007_monthly.nc'"
+    "file8   = 'ANHA12_EXH006_2009_monthly.nc'\n",
+    "file9   = 'ANHA12_EXH006_2010_monthly.nc'\n",
+    "file10  = 'ANHA12_EXH006_2011_monthly.nc'\n",
+    "file11  = 'ANHA12_EXH006_2012_monthly.nc'\n",
+    "file12  = 'ANHA12_EXH006_2013_monthly.nc'\n",
+    "file13  = 'ANHA12_EXH006_2014_monthly.nc'\n",
+    "file14  = 'ANHA12_EXH006_2015_monthly.nc'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "glac_monthly1 = nc.Dataset(folder+file1)\n",
-    "glac_monthly2 = nc.Dataset(folder+file2)\n",
-    "glac_monthly3 = nc.Dataset(folder+file3)\n",
-    "glac_monthly4 = nc.Dataset(folder+file4)\n",
-    "glac_monthly5 = nc.Dataset(folder+file5)\n",
-    "glac_monthly6 = nc.Dataset(folder+file6)\n",
-    "glac_monthly7 = nc.Dataset(folder+file7)"
+    "glac_monthly1  = nc.Dataset(folder+file1)\n",
+    "glac_monthly2  = nc.Dataset(folder+file2)\n",
+    "glac_monthly3  = nc.Dataset(folder+file3)\n",
+    "glac_monthly4  = nc.Dataset(folder+file4)\n",
+    "glac_monthly5  = nc.Dataset(folder+file5)\n",
+    "glac_monthly6  = nc.Dataset(folder+file6)\n",
+    "glac_monthly7  = nc.Dataset(folder+file7)\n",
+    "glac_monthly8  = nc.Dataset(folder+file8)\n",
+    "glac_monthly9  = nc.Dataset(folder+file9)\n",
+    "glac_monthly10 = nc.Dataset(folder+file10)\n",
+    "glac_monthly11 = nc.Dataset(folder+file11)\n",
+    "glac_monthly12 = nc.Dataset(folder+file12)\n",
+    "glac_monthly13 = nc.Dataset(folder+file13)\n",
+    "glac_monthly14 = nc.Dataset(folder+file14)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_monthly1 = nc.Dataset(folder2+file1)\n",
-    "base_monthly2 = nc.Dataset(folder2+file2)\n",
-    "base_monthly3 = nc.Dataset(folder2+file3)\n",
-    "base_monthly4 = nc.Dataset(folder2+file4)\n",
-    "base_monthly5 = nc.Dataset(folder2+file5)\n",
-    "base_monthly6 = nc.Dataset(folder2+file6)\n",
-    "base_monthly7 = nc.Dataset(folder2+file7)"
+    "base_monthly1  = nc.Dataset(folder2+file1)\n",
+    "base_monthly2  = nc.Dataset(folder2+file2)\n",
+    "base_monthly3  = nc.Dataset(folder2+file3)\n",
+    "base_monthly4  = nc.Dataset(folder2+file4)\n",
+    "base_monthly5  = nc.Dataset(folder2+file5)\n",
+    "base_monthly6  = nc.Dataset(folder2+file6)\n",
+    "base_monthly7  = nc.Dataset(folder2+file7)\n",
+    "base_monthly8  = nc.Dataset(folder2+file8)\n",
+    "base_monthly9  = nc.Dataset(folder2+file9)\n",
+    "base_monthly10 = nc.Dataset(folder2+file10)\n",
+    "base_monthly11 = nc.Dataset(folder2+file11)\n",
+    "base_monthly12 = nc.Dataset(folder2+file12)\n",
+    "base_monthly13 = nc.Dataset(folder2+file13)\n",
+    "base_monthly14 = nc.Dataset(folder2+file14)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,12 +189,19 @@
     "dmn_glac_2005 = np.array(glac_monthly4.variables['dissolmn'])[:,0,:,:,:]\n",
     "dmn_glac_2006 = np.array(glac_monthly5.variables['dissolmn'])[:,0,:,:,:]\n",
     "dmn_glac_2007 = np.array(glac_monthly6.variables['dissolmn'])[:,0,:,:,:]\n",
-    "dmn_glac_2008 = np.array(glac_monthly7.variables['dissolmn'])[:,0,:,:,:]"
+    "dmn_glac_2008 = np.array(glac_monthly7.variables['dissolmn'])[:,0,:,:,:]\n",
+    "dmn_glac_2009 = np.array(glac_monthly8.variables['dissolmn'])[:,0,:,:,:]\n",
+    "dmn_glac_2010 = np.array(glac_monthly9.variables['dissolmn'])[:,0,:,:,:]\n",
+    "dmn_glac_2011 = np.array(glac_monthly10.variables['dissolmn'])[:,0,:,:,:]\n",
+    "dmn_glac_2012 = np.array(glac_monthly11.variables['dissolmn'])[:,0,:,:,:]\n",
+    "dmn_glac_2013 = np.array(glac_monthly12.variables['dissolmn'])[:,0,:,:,:]\n",
+    "dmn_glac_2014 = np.array(glac_monthly13.variables['dissolmn'])[:,0,:,:,:]\n",
+    "dmn_glac_2015 = np.array(glac_monthly14.variables['dissolmn'])[:,0,:,:,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +211,14 @@
     "dmn_base_2005 = np.array(base_monthly4.variables['dissolmn'])[:,0,:,:,:]\n",
     "dmn_base_2006 = np.array(base_monthly5.variables['dissolmn'])[:,0,:,:,:]\n",
     "dmn_base_2007 = np.array(base_monthly6.variables['dissolmn'])[:,0,:,:,:]\n",
-    "dmn_base_2008 = np.array(base_monthly7.variables['dissolmn'])[:,0,:,:,:]"
+    "dmn_base_2008 = np.array(base_monthly7.variables['dissolmn'])[:,0,:,:,:]\n",
+    "dmn_base_2009 = np.array(base_monthly8.variables['dissolmn'])[:,0,:,:,:]\n",
+    "dmn_base_2010 = np.array(base_monthly9.variables['dissolmn'])[:,0,:,:,:]\n",
+    "dmn_base_2011 = np.array(base_monthly10.variables['dissolmn'])[:,0,:,:,:]\n",
+    "dmn_base_2012 = np.array(base_monthly11.variables['dissolmn'])[:,0,:,:,:]\n",
+    "dmn_base_2013 = np.array(base_monthly12.variables['dissolmn'])[:,0,:,:,:]\n",
+    "dmn_base_2014 = np.array(base_monthly13.variables['dissolmn'])[:,0,:,:,:]\n",
+    "dmn_base_2015 = np.array(base_monthly14.variables['dissolmn'])[:,0,:,:,:]"
    ]
   },
   {
@@ -198,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,20 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/brogalla/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:8: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  \n",
-      "/home/brogalla/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:8: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "glacier_prop_2002   = calculate_glac_prop(dmn_base_2002, dmn_glac_2002) \n",
     "glacier_prop_2003   = calculate_glac_prop(dmn_base_2003, dmn_glac_2003)\n",
@@ -239,7 +262,14 @@
     "glacier_prop_2005   = calculate_glac_prop(dmn_base_2005, dmn_glac_2005)\n",
     "glacier_prop_2006   = calculate_glac_prop(dmn_base_2006, dmn_glac_2006)\n",
     "glacier_prop_2007   = calculate_glac_prop(dmn_base_2007, dmn_glac_2007)\n",
-    "glacier_prop_2008   = calculate_glac_prop(dmn_base_2008, dmn_glac_2008)"
+    "glacier_prop_2008   = calculate_glac_prop(dmn_base_2008, dmn_glac_2008) \n",
+    "glacier_prop_2009   = calculate_glac_prop(dmn_base_2009, dmn_glac_2009)\n",
+    "glacier_prop_2010   = calculate_glac_prop(dmn_base_2010, dmn_glac_2010)\n",
+    "glacier_prop_2011   = calculate_glac_prop(dmn_base_2011, dmn_glac_2011)\n",
+    "glacier_prop_2012   = calculate_glac_prop(dmn_base_2012, dmn_glac_2012)\n",
+    "glacier_prop_2013   = calculate_glac_prop(dmn_base_2013, dmn_glac_2013)\n",
+    "glacier_prop_2014   = calculate_glac_prop(dmn_base_2014, dmn_glac_2014)\n",
+    "glacier_prop_2015   = calculate_glac_prop(dmn_base_2015, dmn_glac_2015)"
    ]
   },
   {
@@ -1097,7 +1127,14 @@
     "RCD_glac_2005 = find_RCD(glacier_prop_2005, tmask_full, RCD_def=0.05)\n",
     "RCD_glac_2006 = find_RCD(glacier_prop_2006, tmask_full, RCD_def=0.05)\n",
     "RCD_glac_2007 = find_RCD(glacier_prop_2007, tmask_full, RCD_def=0.05)\n",
-    "RCD_glac_2008 = find_RCD(glacier_prop_2008, tmask_full, RCD_def=0.05)"
+    "RCD_glac_2008 = find_RCD(glacier_prop_2008, tmask_full, RCD_def=0.05)\n",
+    "RCD_glac_2009 = find_RCD(glacier_prop_2009, tmask_full, RCD_def=0.05)\n",
+    "RCD_glac_2010 = find_RCD(glacier_prop_2010, tmask_full, RCD_def=0.05)\n",
+    "RCD_glac_2011 = find_RCD(glacier_prop_2011, tmask_full, RCD_def=0.05)\n",
+    "RCD_glac_2012 = find_RCD(glacier_prop_2012, tmask_full, RCD_def=0.05)\n",
+    "RCD_glac_2013 = find_RCD(glacier_prop_2013, tmask_full, RCD_def=0.05)\n",
+    "RCD_glac_2014 = find_RCD(glacier_prop_2014, tmask_full, RCD_def=0.05)\n",
+    "RCD_glac_2015 = find_RCD(glacier_prop_2015, tmask_full, RCD_def=0.05)"
    ]
   },
   {
