--- a/forcing/rivers/apply_concentrations_to_classification.ipynb
+++ b/forcing/rivers/apply_concentrations_to_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rclass = nc.Dataset('/ocean/brogalla/GEOTRACES/data/rivers/river_class_201807.nc','r')\n",
+    "rclass = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river_class_201912.nc','r')\n",
     "river_class = rclass.variables['rclass']\n",
     "river_class = np.array(river_class)"
    ]
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,22 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pMn_rivers[river_class==1.0] = 151*1000 # glaciers\n",
+    "pMn_rivers[river_class==1.0] = 151 # glaciers\n",
     "pMn_rivers[river_class==2.0] = 13  # continental\n",
     "pMn_rivers[river_class==3.0] = 2   # other"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dMn_rivers[river_class==1.0] = 164*1000 # glaciers\n",
+    "dMn_rivers[river_class==1.0] = 164 # glaciers\n",
     "dMn_rivers[river_class==2.0] = 30  # continental\n",
     "dMn_rivers[river_class==3.0] = 2   # other"
    ]
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,15 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.000164\n",
-      "0.0027485504627221113\n"
+      "1.64e-07\n",
+      "2.748550462722111e-06\n"
      ]
     }
    ],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -205,18 +205,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/runoff/runoff_core_monthly.nc','r')\n",
+    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/runoff/ANHA12_runoff_monthly_combined_Dai_Trenberth_Bamber_y2002.nc','r')\n",
     "lon_rf = np.array(c.variables['nav_lon'])\n",
     "lat_rf = np.array(c.variables['nav_lat'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -225,13 +225,13 @@
        "<class 'netCDF4._netCDF4.Dimension'>: name = 'y', size = 2400"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ncd = nc.Dataset('/ocean/brogalla/GEOTRACES/data/rivers/river_input-test-case.nc', 'w', zlib=True)\n",
+    "ncd = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-20191202-base.nc', 'w', zlib=True)\n",
     "# nc_tools.init_dataset_attrs(\n",
     "#     ncd,\n",
     "#     title='Tracer input from rivers',\n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
     }
    ],
    "source": [
-    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/rivers/river_input-base-case.nc','r')\n",
+    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-20191202-base.nc','r')\n",
     "print(np.amax(c.variables['dmn_rivers']))\n",
     "print(np.amax(c.variables['pmn_rivers']))\n",
     "print(np.amax(c.variables['dpb_rivers']))\n",
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -342,38 +342,7 @@
     }
    ],
    "source": [
-    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/rivers/river_input-glacier-enhanced.nc','r')\n",
-    "print(np.amax(c.variables['dmn_rivers']))\n",
-    "print(np.amax(c.variables['pmn_rivers']))\n",
-    "print(np.amax(c.variables['dpb_rivers']))\n",
-    "print(np.amax(c.variables['ppb_rivers']))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Continental river trace metal concentration decreased by 50%:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.64e-07\n",
-      "2.7485505e-06\n",
-      "4.3e-11\n",
-      "2.4131275e-08\n"
-     ]
-    }
-   ],
-   "source": [
-    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/rivers/river_input-decrease-case.nc','r')\n",
+    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-20191202-glacier.nc','r')\n",
     "print(np.amax(c.variables['dmn_rivers']))\n",
     "print(np.amax(c.variables['pmn_rivers']))\n",
     "print(np.amax(c.variables['dpb_rivers']))\n",
@@ -389,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +373,7 @@
     }
    ],
    "source": [
-    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/rivers/river_input-increase-case.nc','r')\n",
+    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-20191202-continental.nc','r')\n",
     "print(np.amax(c.variables['dmn_rivers']))\n",
     "print(np.amax(c.variables['pmn_rivers']))\n",
     "print(np.amax(c.variables['dpb_rivers']))\n",
