--- a/forcing/rivers/apply_concentrations_to_classification.ipynb
+++ b/forcing/rivers/apply_concentrations_to_classification.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,13 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "dMn_rivers[river_class==1.0] = 164 # glaciers\n",
-    "dMn_rivers[river_class==2.0] = 30  # continental\n",
-    "dMn_rivers[river_class==3.0] = 2   # other"
+    "dMn_rivers[river_class==2.0] = 30  # continental, 30\n",
+    "dMn_rivers[river_class==3.0] = 100   # other"
    ]
   },
   {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -225,13 +225,13 @@
        "<class 'netCDF4._netCDF4.Dimension'>: name = 'y', size = 2400"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ncd = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-20191202-base.nc', 'w', zlib=True)\n",
+    "ncd = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-20200114.nc', 'w', zlib=True)\n",
     "# nc_tools.init_dataset_attrs(\n",
     "#     ncd,\n",
     "#     title='Tracer input from rivers',\n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
